--- a/customer/templates/customer/onboard_customer_view.html
+++ b/customer/templates/customer/onboard_customer_view.html
@@ -43,11 +43,11 @@
           </div>
           <div class="stepper-item">
             <div class="step-counter"><i class="mdi mdi-account-multiple-plus"></i></div>
-            <div class="step-name">Add Users</div>
+            <div class="step-name">Add Collaborators</div>
           </div>
         </div>
 
-        <form class="forms-sample border-top py-5" action="{% url 'customer:onboard' customer.uuid %}" method="POST"
+        <form class="forms-sample border-top py-5" action="{% url 'customer:onboard-customer' customer.uuid %}" method="POST"
           enctype="multipart/form-data">
           {% csrf_token %}
           {% include 'customer/profile_form.html' with customer_profile_form=customer_profile_form profile=profile %}
