--- a/templates/_partials/_navbar.html
+++ b/templates/_partials/_navbar.html
@@ -134,7 +134,7 @@
                     </div>
                 </a>
                 <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="{% url 'user:edit' profile.uuid %}">
                         <i class="mdi mdi-account me-2"></i> Profile
                     </a>
                     <a class="dropdown-item" href="{% url 'account_change_password'%}">
