--- a/templates/_partials/_sidebar.html
+++ b/templates/_partials/_sidebar.html
@@ -56,7 +56,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'user:list' %}">
           <span class="menu-title">Users</span>
           <i class="mdi mdi-worker menu-icon"></i>
         </a>
