--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -34,8 +34,8 @@
                     {% slot body %}
                         {% csrf_token %}
                         <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" class="form-control form-control-lg" name="login" autocomplete="email" maxlength="320" required="" id="id_login">
+                            <label for="id_email" style="display: block;">Email:</label>
+                            <input class="form-control form-control-xl" type="email" name="email" autocomplete="email" maxlength="320" required="" id="id_email">
                         </div>
                     {% endslot %}
                     {% slot actions %}
