--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+body, html {
+    height: 100vh;
+}
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
