--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -5,57 +5,58 @@
 {% trans "Forgot Password" %}
 {% endblock head_title %}
 {% block content %}
-<div class="row flex-grow justify-content-center">
-    <div class="col-md-5 bg-white py-3" style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <!-- Image column -->
-        <div class="text-center py-5">
-            <img src="{% static 'images/Password_forgot.svg' %}" alt="Illustration" class="img-fluid">
+<div class="content-wrapper d-flex align-items-center auth ">
+    <div class="row flex-grow justify-content-center">
+        <div class="col-md-5 py-3"
+            style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+            <!-- Image column -->
+            <div class="text-center py-5">
+                <img src="{% static 'images/Password_forgot.svg' %}" alt="Illustration" class="img-fluid">
+            </div>
+            <!-- Image column end -->
         </div>
-        <!-- Image column end -->
-    </div>
-    
-    <!-- Reset Password column -->
-    <div class="col-md-5 d-flex align-items-center justify-content-center bg-white px-5">
-        <div class="auth-form-light text-left"> 
-            <div class="col-md-11 px-3">
-                {% element h2 %}
-                <h2 class="my-3 card-title">
-                    Forgot Password?
-                </h2>
-                {% endelement %}
-                {% if user.is_authenticated %}
+
+        <!-- Reset Password column -->
+        <div class="col-md-5 d-flex align-items-center justify-content-center px-5 bg-white">
+            <div class="auth-form-light text-left">
+                <div class="col-md-12 px-3">
+                    {% element h2 %}
+                    <h2 class="my-3 card-title">
+                        Forgot Password?
+                    </h2>
+                    {% endelement %}
+                    {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
-                {% endif %}
-                <p class="my-4 font-weight-light transparent-text">
-                    {% trans "Did you forget your password? Enter your email address below and we'll send you an email to reset it." %}
-                </p>
-                {% url 'account_reset_password' as reset_url %}
-                {% element form form=form method="post" action=reset_url %}
+                    {% endif %}
+                    <p class="my-4 font-weight-light transparent-text">
+                        {% trans "Did you forget your password? Enter your email address below and we'll send you an email to reset it." %}
+                    </p>
+                    {% url 'account_reset_password' as reset_url %}
+                    {% element form form=form method="post" action=reset_url %}
                     {% slot body %}
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="id_email" style="display: block;">Email:</label>
-                            <input class="form-control form-control-xl" type="email" name="email" autocomplete="email" maxlength="320" required="" id="id_email">
-                        </div>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="id_email" style="display: block;">Email:</label>
+                        <input class="form-control form-control-xl" type="email" name="email" autocomplete="email"
+                            maxlength="320" required="" id="id_email">
+                    </div>
                     {% endslot %}
                     {% slot actions %}
                     <button type="submit" class="my-1 btn btn-gradient-primary w-100">
-                        Reset Password        
+                        Reset Password
                     </button>
                     {% endslot %}
-                {% endelement %}
-                <p class="mt-3 font-weight-light transparent-text">
-                    {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-                </p>
-                <p class="text-muted font-weight-light">Copyright © Tabernacle 2024</p>
+                    {% endelement %}
+                    <p class="mt-3 font-weight-light transparent-text">
+                        {% blocktrans %}Please contact us if you have any trouble resetting your
+                        password.{% endblocktrans %}
+                    </p>
+                    <p class="text-muted font-weight-light">Copyright © Tabernacle 2024</p>
+                </div>
             </div>
         </div>
+        <!-- Reset Password column end -->
     </div>
-    <!-- Reset Password column end -->
-    
+    <!-- flex account_reset_password end -->
 </div>
-<!-- flex account_reset_password end -->
-
-
 {% endblock content %}
-
