--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,29 +1,34 @@
-{% extends "../account_base.html" %}    
+{% extends "../account_base.html" %}
 {% load static %}
 {% load i18n %}
 {% load allauth %}
 {% load account %}
 {% block head_title %}
-    {% trans "Password Reset" %}
+{% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-<div class="row flex-grow justify-content-center">
-    <div class="col-md-10 bg-white py-5" style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <div class="text-center">
-            <img src="{% static 'images/VerifyMail.svg' %}" alt="Illustration" style="width: 15%; height: auto;">
-        </div>
-        <div class="text-center">
-            {% element h2 %}
+<div class="content-wrapper d-flex align-items-center auth bg-white">
+    <div class="row flex-grow justify-content-center">
+        <div class="col-md-10 py-5"
+            style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+            <div class="text-center">
+                <img src="{% static 'images/VerifyMail.svg' %}" alt="Illustration" style="width: 15%; height: auto;">
+            </div>
+            <div class="text-center">
+                {% element h2 %}
                 <h2 class="my-3 card-title">{% trans "Password Reset E-mail Sent" %}</h2>
-            {% endelement %}
-            {% if user.is_authenticated %}
+                {% endelement %}
+                {% if user.is_authenticated %}
                 {% include "account/snippets/already_logged_in.html" %}
-            {% endif %}
-            <p class="my-3 font-weight-light">
-                {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
-            </p>
+                {% endif %}
+                <p class="my-3 font-weight-light">
+                    {% blocktrans %}We have sent you an email. If you have not received it please check your spam
+                    folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
+                </p>
+            </div>
+            <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
         </div>
-        <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
     </div>
 </div>
+
 {% endblock content %}
