Password and Email Pages

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -20,6 +20,10 @@
         <div class="col-md-5 d-flex align-items-center justify-content-center px-5 bg-white">
             <div class="auth-form-light text-left">
                 <div class="col-md-12 px-3">
+                    <div class="brand-logo">
+                        <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'images/logo.png' %}"
+                                alt="logo" /></a>
+                    </div>
                     {% element h2 %}
                     <h2 class="my-3 card-title">
                         Forgot Password?
