--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,34 +1,111 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}    
+{% load static %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
+    
         {% if token_fail %}
-            {% trans "Bad Token" %}
+        <div class="content-wrapper d-flex align-items-center auth bg-white">
+            <div class="row flex-grow">
+                <div class="col-md-12 bg-white"
+                    style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <div class="text-center">
+                        <img src="{% static 'images/Inactive.svg' %}" alt="Illustration" style="width: 14%; height: auto;">
+                    </div>
+                    <div class="text-center">
+                        {% element h2 %}
+                            <h2 class="my-3 card-title">{% trans "Bad Token" %}</h2>
+                        {% endelement %}
+                        {% url 'account_reset_password' as passwd_reset_url %}
+                        <p>
+                            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">New Password Reset</a>.{% endblocktrans %}
+                        </p>
+                    </div>
+                <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+                </div>
+            </div>
+        </div>
+
         {% else %}
-            {% trans "Change Password" %}
-        {% endif %}
-    {% endelement %}
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>
-            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
-        </p>
-    {% else %}
-        {% element form method="post" action=action_url %}
-            {% slot body %}
-                {% csrf_token %}
-                {% element fields form=form %}
-                {% endelement %}
-            {% endslot %}
-            {% slot actions %}
-                {% element button type="submit" name="action" %}
-                    {% trans 'Change Password' %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
-    {% endif %}
+        <div class="content-wrapper d-flex align-items-center auth ">
+            <div class="row flex-grow justify-content-center">
+                <div class="col-md-5 py-3"
+                    style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <!-- Image column -->
+                    <div class="text-center py-5">
+                        <img src="{% static 'images/Done.svg' %}" alt="Illustration" class="img-fluid">
+                    </div>
+                    <!-- Image column end -->
+                </div>
+
+                <div class="col-md-5 d-flex align-items-center justify-content-center px-5 bg-white">
+                    <div class="auth-form-light text-left">
+                        <div class="col-md-12 px-3">
+                            <div class="brand-logo">
+                                <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'images/logo.png' %}"
+                                        alt="logo" /></a>
+                            </div>
+                            {% element h2 %}
+                            <h2 class="my-3 card-title">
+                               Change Password
+                            </h2>
+                            {% endelement %}
+                            {% element form method="post" action=action_url %}
+                            {% slot body %}
+                                {% csrf_token %}
+                                <div class="auth-form-light text-left font-weight-light">   
+                                    <div class="form-group position-relative mb-4">
+                                        <label for="id_password1">New Password:</label>
+                                        <div class="position-relative">
+                                            <input class="form-control form-control-xl" type="password" name="password1" placeholder="New Password" required aria-describedby="id_password_helptext" id="id_password1">
+                                            <span class="toggle-password">
+                                                <i class="fa fa-eye-slash"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <span class="helptext" id="id_password1_helptext"></span></p>
+                                    <ul class="transparent-text font-weight-light">
+                                        <li>
+                                            Your password can’t be too similar to your other personal information.
+                                        </li>
+                                        <li>
+                                            Your password must contain at least 8 characters.
+                                        </li>
+                                        <li>
+                                            Your password can’t be a commonly used password.
+                                        </li>
+                                        <li>
+                                            Your password can’t be entirely numeric.
+                                        </li>
+                                    </ul>
+                                    <div class="auth-form-light text-left font-weight-light">   
+                                        <div class="form-group position-relative mb-4">
+                                            <label for="id_password2">New Password(Again):</label>
+                                            <div class="position-relative">
+                                                <input class="form-control form-control-xl" type="password" name="password2" placeholder="New Password(Again)" required aria-describedby="id_password_helptext" id="id_password2">
+                                                <span class="toggle-password">
+                                                    <i class="fa fa-eye-slash"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+                            {% endslot %}
+                            {% slot actions %}
+                                <button type="submit" name="action" class="my-1 btn btn-primary w-100">
+                                    Change Password                    
+                                </button>
+                                <p class="text-muted font-weight-light text-center mt-2">Copyright © Tabernacle 2024</p>
+                            {% endslot %}
+                        {% endelement %}
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Reset Password column end -->
+                    </div>
+                    <!-- flex account_reset_password end -->
+                </div>
+            {% endif %}
+        
 {% endblock content %}
