--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -7,33 +7,45 @@
     {% trans "Confirm Email Address" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Confirm Email Address" %}
-    {% endelement %}
-    {% if confirmation %}
-        {% user_display confirmation.email_address.user as user_display %}
-        {% if can_confirm %}
-            <p>
-                {% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an email address for user {{ user_display }}.{% endblocktrans %}
-            </p>
-            {% url 'account_confirm_email' confirmation.key as action_url %}
-            {% element form method="post" action=action_url %}
-                {% slot actions %}
-                    {% csrf_token %}
-                    {% element button type="submit" %}
-                        {% trans 'Confirm' %}
-                    {% endelement %}
-                {% endslot %}
-            {% endelement %}
-        {% else %}
-            <p>
-                {% blocktrans %}Unable to confirm {{ email }} because it is already confirmed by a different account.{% endblocktrans %}
-            </p>
-        {% endif %}
-    {% else %}
-        {% url 'account_email' as email_url %}
-        <p>
-            {% blocktrans %}This email confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new email confirmation request</a>.{% endblocktrans %}
-        </p>
-    {% endif %}
+
+<div class="content-wrapper d-flex align-items-center auth bg-white">
+    <div class="row flex-grow">
+        <div class="col-md-12 bg-white"
+            style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+            <div class="text-center">
+                <img src="{% static 'images/Done.svg' %}" alt="Illustration" style="width: 14%; height: auto;">
+            </div>
+            <div class="text-center">
+                {% element h2 %}
+                    <h2 class="my-3 card-title">{% trans "Confirm Email" %}</h2>
+                {% endelement %}
+                {% if confirmation %}
+                    {% user_display confirmation.email_address.user as user_display %}
+                    {% if can_confirm %}
+                        <p class="my-3 font-weight-light">
+                            {% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an email address for user {{ user_display }}.{% endblocktrans %}
+                        </p>
+                        {% url 'account_confirm_email' confirmation.key as action_url %}
+                        {% element form method="post" action=action_url %}
+                            {% slot actions %}
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-gradient-primary mb-3">Confirm</button>
+                            {% endslot %}
+                        {% endelement %}
+                    {% else %}
+                        <p>
+                            {% blocktrans %}Unable to confirm {{ email }} because it is already confirmed by a different account.{% endblocktrans %}
+                        </p>
+                    {% endif %}
+                {% else %}
+                    {% url 'account_email' as email_url %}
+                    <p>
+                        {% blocktrans %}This email confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new email confirmation request</a>.{% endblocktrans %}
+                    </p>
+                {% endif %}     
+            </div>
+            <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+        </div>
+    </div>
+</div>
 {% endblock content %}
