--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,12 +1,29 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}    
+{% load static %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="content-wrapper d-flex align-items-center auth bg-white">
+    <div class="row flex-grow">
+        <div class="col-md-12 bg-white"
+            style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+            <div class="text-center">
+                <img src="{% static 'images/Done.svg' %}" alt="Illustration" style="width: 14%; height: auto;">
+            </div>
+            <div class="text-center">
+                {% element h2 %}
+                    <h2 class="my-3 card-title">{% trans "Change Password" %}</h2>
+                {% endelement %}
+                {% url 'account_reset_password' as passwd_reset_url %}
+                <p>
+                    {% blocktrans %}Your Password has been changed successfully.{% endblocktrans %}
+                </p>
+            </div>
+        <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+        </div>
+    </div>
+</div>
 {% endblock content %}
