--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="content-wrapper d-flex align-items-center auth bg-white">
     <div class="row flex-grow">
-        <div class="col-md-12"
+        <div class="col-md-12 bg-white"
             style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
             <div class="text-center">
                 <img src="{% static 'images/Signup_closed.svg' %}" alt="Illustration" style="width: 14%; height: auto;">
@@ -26,8 +26,9 @@
                 </p>
 
             </div>
-            <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+        <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
         </div>
     </div>
+</div>
 
     {% endblock content %}
