prospects calendar and upcoming secrions added

--- a/prospect/templates/prospect/_partials/_prospect_form.html
+++ b/prospect/templates/prospect/_partials/_prospect_form.html
@@ -31,7 +31,7 @@
   </div>
   <div class="col-12 col-md-6">
     <div class="form-group">
-      <label for="{{ contact_form.congregation.id_for_label }}">Congregation Size (Approx)</label>
+      <label for="{{ prospect_form.congregation.id_for_label }}">Congregation Size (Approx)</label>
       {{ prospect_form.congregation }}
     </div>
   </div>
