--- a/prospect/templates/prospect/create_view.html
+++ b/prospect/templates/prospect/create_view.html
@@ -12,6 +12,10 @@
 </ol>
 {% endblock %}
 
+{% block scripts %}
+<script src="{% static 'prospect/js/app.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="form-container">
     <div class="col-12 grid-margin stretch-card">
