--- a/prospect/templates/prospect/_partials/_upcoming_events.html
+++ b/prospect/templates/prospect/_partials/_upcoming_events.html
@@ -1,5 +1,5 @@
 <section class="main">
-    <section class="first">
+    <section class="upcoming-events">
     <div>
         <p style="font-size: 1.5em; color: #1c265a;">
             <b>Upcoming Events</b>
@@ -32,7 +32,7 @@
                     {% endif %}
                     <p class="arrow">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="aroow bi bi-arrow-right" viewBox="0 0 16 16">
+                            class="" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
                         </svg></p>
