user forms refactor

--- a/contact/templates/contact/create_view.html
+++ b/contact/templates/contact/create_view.html
@@ -25,8 +25,8 @@
 
         <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
-          {% include 'contact/contact_form.html' %}
-          <button type="submit" class="btn btn-gradient-primary me-3">Save Contact</button>
+          {% include 'contact/_partials/_contact_form.html' %}
+          <button type="submit" class="btn btn-gradient-primary me-3">Add Contact</button>
           <a href="{% url 'contact:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
         </form>
       </div>
