--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -21,8 +21,9 @@
                 <p>
                     {% blocktrans %}Your Password has been changed successfully.{% endblocktrans %}
                 </p>
+                <a href="{% url 'account_login' %}" class="btn btn-gradient-primary">Go to Login</a>
             </div>
-        <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+        <p class="text-muted font-weight-light text-center mt-5">Copyright © Tabernacle 2024</p>
         </div>
     </div>
 </div>
