--- a/contact/templates/contact/edit_view.html
+++ b/contact/templates/contact/edit_view.html
@@ -27,7 +27,7 @@
         <p class="card-description">Update contact details </p>
         <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
-          {% include 'contact/contact_form.html' %}
+          {% include 'contact/_partials/_contact_form.html' %}
           <div class="d-flex justify-content-between align-items-center">
               <div>
                   <button type="submit" class="btn btn-gradient-primary me-2">Update Contact</button>
