--- a/user/templates/User/create_view.html
+++ b/user/templates/User/create_view.html
@@ -27,33 +27,14 @@
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h1>Create User</h1>
-        <form method="POST">
-          {% csrf_token %}
-          {{ user_form.full_name.label_tag}}
-          {{user_form.full_name}}
-          {{ user_form.password.label_tag}}
-          {{user_form.password}}
-          {{ user_form.mobile_no.label_tag}}
-          {{user_form.mobile_no}}
-          {{ user_form.email.label_tag}}
-          {{user_form.email}}
-          {{ user_form.is_staff.label_tag}}
-          {{user_form.is_staff}}
-          {{ user_form.is_superuser.label_tag}}
-          {{user_form.is_superuser}}
-          {{ user_form.is_active.label_tag}}
-          {{user_form.is_active}}
-          {{profile_form.image.label_tag}}
-          {{ profile_form.image }}
-          {{profile_form.date_of_birth.label_tag}}
-          {{ profile_form.date_of_birth }}
-          {{profile_form.designation.label_tag}}
-          {{ profile_form.designation }}
-          <br>
-          <br>
+        <h4 class="card-title">Add New User</h4>
+        <p class="card-description">Enter User details </p>
 
-          <button class="btn btn-primary" type="submit">Create User</button>
+        <form class="forms-sample" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          {% include 'user/_partials/_user_form.html' %}
+          <button type="submit" class="btn btn-gradient-primary me-3">Create User</button>
+          <a href="{% url 'user:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
         </form>
       </div>
     </div>
