--- a/user/templates/User/edit_view.html
+++ b/user/templates/User/edit_view.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% load static %}
 
 {% block head_title %}{{ title }}{% endblock %}
@@ -13,17 +12,14 @@
 {% endblock %}
 
 {% block page_title %}
-<span class="page-title-icon bg-gradient-primary text-white me-2">
-  <i class="mdi mdi-contacts"></i>
-</span>
 {{ title }}
 {% endblock %}
 
 {% block breadcrumbs %}
-<ul class="breadcrumb">
-  <li class="breadcrumb-item active" aria-current="page">
-  </li>
-</ul>
+<ol class="breadcrumb">
+  <li class="breadcrumb-item"><a href="{% url 'user:list' %}">User Directory</a></li>
+  <li class="breadcrumb-item active" aria-current="page">Edit User</li>
+</ol>
 {% endblock %}
 
 {% block content %}
@@ -31,33 +27,18 @@
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h1>Edit User</h1>
-        <form method="post">
+        <h4 class="card-title">Edit User</h4>
+        <p class="card-description">Update User details </p>
+
+        <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
-          {{ user_form.full_name.label_tag}}
-          {{user_form.full_name}}
-          {{ user_form.mobile_no.label_tag}}
-          {{user_form.mobile_no}}
-          {{ user_form.email.label_tag}}
-          {{user_form.email}}
-          {{ user_form.is_staff.label_tag}}
-          {{user_form.is_staff}}
-          {{ user_form.is_superuser.label_tag}}
-          {{user_form.is_superuser}}
-          {{ user_form.is_active.label_tag}}
-          {{user_form.is_active}}
-          {{profile_form.image.label_tag}}
-          {{ profile_form.image }}
-          {{profile_form.date_of_birth.label_tag}}
-          {{ profile_form.date_of_birth }}
-          {{profile_form.designation.label_tag}}
-          {{ profile_form.designation }}
-          <br>
-          <br>
-          <button class="btn btn-primary" type="submit">Edit User</button>
+          {% include 'user/_partials/_user_form.html' %}
+          <button type="submit" class="btn btn-gradient-primary me-3">Save User</button>
+          <a href="{% url 'user:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
         </form>
       </div>
     </div>
   </div>
 </div>
+
 {% endblock %}
