--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="content-wrapper d-flex align-items-center auth ">
     <div class="row flex-grow justify-content-center">
-        <div class="col-md-5 py-3"
+        <div class="col-md-5 py-3 d-none d-lg-block"
             style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
             <!-- Image column -->
             <div class="text-center py-5">
@@ -17,7 +17,7 @@
         </div>
 
         <!-- Reset Password column -->
-        <div class="col-md-5 d-flex align-items-center justify-content-center px-5 bg-white">
+        <div class="col-lg-5 d-flex align-items-center justify-content-center p-5 bg-white">
             <div class="auth-form-light text-left">
                 <div class="col-md-12 px-3">
                     <div class="brand-logo">
