calendar color change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20040,7 +20040,7 @@ dl li {
 .table thead th {
   border-top: 0;
   border-bottom-width: 1px;
-  font-family: "ubuntu-medium", sans-serif;
+  font-family: "ubuntu-bold", sans-serif;
   font-weight: initial;
 }
 
