--- a/customer/templates/customer/onboard_select_plan.html
+++ b/customer/templates/customer/onboard_select_plan.html
@@ -25,6 +25,7 @@
 {% endblock %}
 
 {% block content %}
+{% include "customer/_partials/_collect_payment_modal.html" %}
 <div class="form-container">
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
@@ -51,6 +52,8 @@
           enctype="multipart/form-data" data-url="{% url 'plan:get-plan-amount' %}"
           plan-url="{% url 'customer:get-plan-options' %}">
           {% csrf_token %}
+          <input type="hidden" value="{{plan_options_form.payment_mode.value}}" name="payment_mode">
+          <input type="hidden" value="{{plan_options_form.payment_status.value}}" name="payment_status">
           <div class="toggle-group">
             <div class="toggle-container text-uppercase fw-bold pt-5 py-3">
               <small class="me-3">Monthly</small>
@@ -74,17 +77,7 @@
           </div>
           <div id="paymentInfo" class="d-none row my-3">
           <hr>
-            <div class="col-md-5">
-              <div class="form-group">
-                <label>Payment Mode</label>
-                {{ plan_options_form.payment_mode}}
-              </div>
-              <div class="form-group">
-                <label>Payment Status</label>
-                {{ plan_options_form.payment_status}}
-              </div>
-            </div>
-            <div class="offset-2 col-md-5">
+            <div class="col-md-7">
               <div class="form-group">
                 <label>Discount</label>
                 <div class="d-flex justify-content-between">
@@ -96,11 +89,21 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class=" col-md-5">
+              <div class="text-secondary mb-3">Payment Summary</div>
               <div class="amount-group d-flex justify-content-between">
-                <label>Subtotal</label>
+                <label></label>
                 <div id="subtotalAmount">
                   ₹0.00
                 </div>
+              </div>
+              <div class="amount-group d-flex justify-content-between">
+                <label class="badge badge-success text-white"><small>15% Discount</small></label>
+                <div>
+                  <s id="selectedPlanAmount"> ₹0.00</s>
+                </div>
+                
               </div>
               <div class="amount-group d-flex justify-content-between">
                 <label>Discount</label>
@@ -115,11 +118,20 @@
                   <small>INR</small> ₹0.00
                 </div>
               </div>
+              <div class="mb-3">
+                <div class="form-check form-switch">
+                  <input class="form-check-input ms-0 me-2" type="checkbox" role="switch" id="paymentStatus">
+                  <label class="form-check-label ms-4" for="paymentStatus">Payment due later</label>
+                </div>
+              </div>
             </div>
             <div class="text-end">
               <a href="{% url 'customer:onboard-customer' customer_id %}" class="btn btn-outline-primary me-3">Go Back</a>
-              <button type="submit" class="btn btn-gradient-primary" name="action" value="continue">
-                Collect Payment
+              <button type="submit" class="btn btn-gradient-primary" name="action" value="continue" id="btnSubmit">
+                Collect Payment 1
+              </button>
+              <button type="button" class="btn btn-gradient-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="btnModal">
+                Collect Payment 2
               </button>
             </div>
           </div>
